# trade_module

./: .env.example  .example.database.env  .example.env  .flake8  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2022-05-21-23-48-57_6ac1c1c54be6_create_transcation_table.py  2022-05-23-19-29-28_d45629071765_added_email_fields.py  2022-05-28-16-07-12_1312b3fcc59d_fiat_data_and_updated_at.py  2022-05-30-22-32-44_2ed50c4780ec_sell_type_added.py  2022-06-06-03-48-16_3b04336b822e_timezone.py  2022-06-06-08-31-26_d692cc93e2dd_added_lot_id.py
src/: exceptions.py  httpx_client.py
src/api/: dependencies.py
src/api/v1/: api.py  trade_service.py
src/api/v1/endpoints/: trade.py
src/app/: app.py
src/core/: broker_config.py  celery_app.py  config.py  decorators.py  dependencies.py  logger_config.py
src/crud/: __init__.py  base.py  crud_transaction.py
src/db/: session.py
src/db/models/: __init__.py  transaction.py
src/schemas/: __init__.py  transaction.py
